Mon Jan 17 23:11:28 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* COPYING: Update copyright year.
	* crypt/crypt-entry.c: Poison for SCL build.
	* crypt/md5.c,crypt/md5-crypt.c,fenv/fclrexcpt.c,fenv/fedisblxcpt.c
	fenv/feenablxcpt.c,fenv/fegetenv.c,fenv/fegetexcept.c,
	fenv/fegetround.c,fenv/feholdexcpt.c,fenv/fesetenv.c,fenv/fesetround.c,
	fenv/fraiseexcpt.c,fenv/fsetexcptflg.c,fenv/ftestexcept.c,
	gmon/gmon-start.c,gmon/profil.c,misc/dirname.c,netlib/ul_in6_addr.c,
	resolv/ul_opensock.c,resolv/ul_res_hconf.c,search/hsearch.c,
	search/insremque.c,search/lsearch.c,search/tsearch.c,signal/sleep.c,
	stdlib/msort.c,stdlib/xpg_basename.c,string/basename.c,string/memrchr.c,
	string/rawmemchr.c,string/strchrnul.c,string/strndup.c,string/strnlen.c,
	string/swab.c,sys/alarm.c,unistd/getpass.c,unistd/lockf.c,unix/getopt1.c,
	unix/getopt.c,unix/pselect.c,wchar/btowc.c,wchar/mbrlen.c,wchar/mbrtowc.c,
	wchar/mbsinit.c,wchar/mbsnrtowcs.c,wchar/mbsrtowcs.c,wchar/wcpcpy.c,
	wchar/wcpncpy.c,wchar/wcrtomb.c,wchar/wcscat.c,wchar/wcschr.c,
	wchar/wcscmp.c,,wchar/wcscoll.c,wchar/wcscpy.c,wchar/wcscspn.c,
	wchar/wcsdup.c,wchar/wcslen.c,wchar/wcsncat.c,wchar/wcsncmp.c,
	wchar/wcsncpy.c,wchar/wcsnrtombs.c,wchar/wcspbrk.c,wchar/wcsrchr.c,
	wchar/wcsrtombs.c,wchar/wcsspn.c,wchar/wcsstr.c,wchar/wcstok.c,
	wchar/wcswidth.c,wchar/wctob.c,wchar/wcwidth.c,wchar/wmemchr.c,
	wchar/wmemcmp.c,wchar/wmemcpy.c,wchar/wmemmove.c,wchar/wmemset.c:
	Likewise.
	* Makefile.am: Add comment libm-complex, libm-dbl64, lib-m-flt32 and
	libm-generic sources should not be used in SCL build.

Sun Jan 16 19:24:04 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* string/stricmp.c (strcasecmp): Enable as strong alias for stricmp
	in SCL build.
	* string/strdup.c (strdup, __strdup): Minor cleanup.

Sat Jan 15 22:33:33 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* incl-local/internal/elf-macros.s (CHGMODE): Fix bug exposed by
	binutils 2.21.

Mon Jan 10 03:24:52 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
