@@ -1,3 +1,8 @@
+Sun Jan 23 19:02:26 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* kernel/kosfile.s (_kernel_osfile): Fix based on the fact that 2nd
+	parameter can not be NULL.
+
 Mon Jan 17 23:11:28 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* COPYING: Update copyright year.
@@ -185,7 +190,7 @@ Thu Aug 26 03:36:17 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>
 
 	* unix/getenv (__intenv): Move to...
 	* unix/pipe.c: ...here.  Changed return type to unsigned int.
-	(pipe): Follow return tyep change.
+	(pipe): Follow return type change.
 	* incl-local/internal/unix.h (__intenv): Remove prototype.
 	* vscript (__intenv): Remove.
 	* unix/getenv.c: Moved remaining part to...
